# vocaply-system

./: Day 20 Action Items API.md  Day 20 Action Items APIs.txt
docs/: Make a API archtecture.txt  Vocaply 100 Day Build.md  Vocaply Full Frontend.md  Vocaply Full Scalable APi.md  pricing.md  (+6 more)
services/ai-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  Vocaply AI Pipeline Day48.md  Vocaply AI Pipeline Day49.md  Vocaply_AI_Pipeline_Day46_Deep_Plan.md  Vocaply_AI_Pipeline_Day47_Deep_Plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_api_out.txt  test_api_out_8003.txt
services/ai-pipeline/src/api/: deps.py  main.py
services/ai-pipeline/src/api/routes/: cleanup.py  extract.py  health.py
services/ai-pipeline/src/config/: cleanup_config.py  logging.py  model_routing.py  settings.py
services/ai-pipeline/src/db/: mongo_client.py  redis_client.py
services/ai-pipeline/src/eval/: eval_schema.py
services/ai-pipeline/src/eval/golden_dataset/: ambiguous_cases_cleaned.json  sprint_review_01_cleaned.json  sprint_review_01_expected.json  standup_01_cleaned.json  standup_01_expected.json
services/ai-pipeline/src/middleware/: error_handler.py  request_id.py  request_logger.py
services/ai-pipeline/src/models/: chunk_models.py  cleanup_models.py  common.py  exceptions.py  extraction_models.py
services/ai-pipeline/src/prompts/: action_item_examples.txt  cleanup_system.txt  commitment_examples.txt  extraction_system.txt  extraction_user.txt
services/ai-pipeline/src/services/: chunker.py  gemini_client.py  tokenization.py
services/ai-pipeline/src/services/cleanup/: __init__.py  confidence_flagger.py  filler_word_remover.py  grammar_normalizer.py  speaker_formatter.py  transcript_cleaner.py
services/ai-pipeline/src/services/extraction/: action_item_parser.py  blocker_parser.py  commitment_parser.py  decision_parser.py  extractor.py
services/ai-pipeline/tests/: conftest.py  test_action_item_parser.py  test_blocker_parser.py  test_cleanup_endpoint.py  test_commitment_parser.py  test_decision_parser.py  test_extraction_models.py  test_filler_word_remover.py  test_gemini_client.py  test_grammar_normalizer.py  test_health.py  test_middleware.py  test_settings.py  test_speaker_formatter.py  test_transcript_cleaner.py
services/ai-pipeline/tests/fixtures/: participant_map_standup.json  raw_transcript_edge_cases.json  raw_transcript_standup_fragmented.json
(+281 files in other folders)
