[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vocaply-ai-pipeline"
version = "0.1.0"
description = "Vocaply AI Pipeline — FastAPI + Gemini + Motor + Redis"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print (blocks print() calls — enforces structlog discipline)
    "ANN", # flake8-annotations (type hints enforced)
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self — too noisy
    "ANN102", # missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) — sometimes needed
    "B008",   # do not perform function calls in default arg (Depends() is the FastAPI idiom)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── MyPy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests that require live external services",
    "unit: marks pure unit tests with all dependencies mocked",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/api/main.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
